Import of AKS/Net-Facebook-API-0.07 from CPAN.
gitpan-cpan-distribution: Net-Facebook-API
gitpan-cpan-version:      0.07
gitpan-cpan-path:         AKS/Net-Facebook-API-0.07.tar.gz
gitpan-cpan-author:       AKS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -25,11 +25,11 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-LWP::UserAgent;
-URI::Escape;
-MIME::Base64::URLSafe;
-Digest::SHA qw(hmac_sha256);
-JSON::XS;
+LWP::UserAgent
+URI::Escape
+MIME::Base64::URLSafe
+Digest::SHA qw(hmac_sha256)
+JSON::XS
 
 COPYRIGHT AND LICENCE
 
