--- a/README
+++ b/README
@@ -35,7 +35,7 @@ COPYRIGHT AND LICENCE
 
 Put the correct copyright and licence information here.
 
-Copyright (C) 2011 by Asaf Klibansky <asaf@sortprice.com>
+Copyright (C) 2011 by Asaf Klibansky <discobeta@gmail.com>
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.5 or,
